// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@button: matches snapshot * appearance * empty 1`] = `
<Wrapper
  forwardedRef={null}
/>
`;

exports[`@button: matches snapshot * appearance * icon 1`] = `
<Wrapper
  forwardedRef={null}
  icon={[Function]}
/>
`;

exports[`@button: matches snapshot * appearance * icon and text (styled) 1`] = `
<Wrapper
  forwardedRef={null}
  icon={[Function]}
  size="giant"
  textStyle={
    Object {
      "fontSize": 32,
      "lineHeight": 34,
    }
  }
>
  BUTTON
</Wrapper>
`;

exports[`@button: matches snapshot * appearance * icon and text 1`] = `
<Wrapper
  forwardedRef={null}
  icon={[Function]}
>
  BUTTON
</Wrapper>
`;

exports[`@button: matches snapshot * appearance * text 1`] = `
<Wrapper
  forwardedRef={null}
>
  BUTTON
</Wrapper>
`;

exports[`@button: matches snapshot * interaction * stateless 1`] = `
<Wrapper
  forwardedRef={null}
/>
`;
